Add scope and variable classes.

--- a/Interpreter/Interpreter.csproj
+++ b/Interpreter/Interpreter.csproj
@@ -36,6 +36,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scope.cs" />
     <Compile Include="Parser\AST\AssignmentStatementNode.cs" />
     <Compile Include="Parser\AST\BeginStatementNode.cs" />
     <Compile Include="Parser\AST\BinaryExpressionNode.cs" />
@@ -61,6 +62,7 @@
     <Compile Include="Parser\Scanner.cs" />
     <Compile Include="Parser\Token.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Variable.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
