--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ParserTests.cs" />
     <Compile Include="ScannerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="EvaluatorTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
